canvas image appearing on browser and is scaled to save in download pdf.